# example-k8-launcher

./: .gitignore  Makefile  README.md
agent/: Dockerfile  entrypoint.sh
agent/hooks/: log_event.sh
docs/: architecture.md
helm/launcher/: Chart.yaml  values.yaml
helm/launcher/templates/: NOTES.txt  _helpers.tpl  launcher-deployment.yaml  launcher-ingress.yaml  launcher-route.yaml  launcher-service.yaml  networkpolicy-agent.yaml  postgres.yaml  rbac.yaml
launcher/: Dockerfile  pyproject.toml
launcher/app/: agent_manifest.py  db.py  k8s.py  main.py  models.py  settings.py
launcher/app/static/: app.js  index.html  run.html  run.js  styles.css
nginx-egress/: Dockerfile  entrypoint.sh  tinyproxy.conf.template
