[project]
name = "agent-launcher"
version = "0.1.0"
description = "Tiny FastAPI launcher for short-lived AI-agent Jobs on OpenShift."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "aiosqlite>=0.19",
  "kubernetes>=29.0",
  "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
